# haruhiloop

./: .gitignore  LICENSE  README.md  README_zh-CN.md  main.py  pyproject.toml
.cursor/plans/: galgame-scene-route-refactor_a0133450.plan.md  haruhi_loop_cli_mvp_72bc269c.plan.md  haruhiloop-two-version-roadmap_1eeac87b.plan.md  japanese-quote-tui-enhancement_d7afc340.plan.md  src模块工程化重构_f0b4e813.plan.md  tui-narrative-visibility-iteration_34a7e272.plan.md
.haruhiloop_runs/20c0adb1/: state.json
.haruhiloop_runs/2763bbbe/: history.jsonl  state.json
.haruhiloop_runs/6004fb0b/: state.json
.haruhiloop_runs/b57cb193/: history.jsonl  state.json
.haruhiloop_runs/tryme001/: history.jsonl  state.json
docs/: arch.md  arch_zh-CN.md  design.md  dev.md  dev_endings.md  getting-started.md  tui-play-memo.md  tui_play_memo.md
docs/dev/: action-flavor-memo.md  arch.md
scripts/: dump_golden.py  get_utf8art.sh
src/haruhi_cli/: __init__.py  engine.py  main.py  models.py  policy.py  rules.py  storage.py  view.py
src/haruhiloop_cli/: action_flavor_zh.py  ending_conditions_zh.py  ending_epilogues.py  engine.py  i18n.py  main.py  models.py  mutator.py  play_app.py  policy.py  rules.py  storage.py  view.py
tests/: test_action_flavor.py  test_endings.py  test_engine.py  test_mutator.py  test_quote_effects.py  test_systems_v03.py  test_tui_hybrid_view.py
web/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/scripts/: build-python-bundle.sh  diag-width.mjs
web/src/: main.ts
web/tests/: endings.spec.ts  engine.spec.ts  (+5 more)
(+75 files in other folders)
