[project]
name = "haruhiloop"
version = "0.4.0"
description = "A time-loop CLI simulator inspired by \"The Endless August\" from \"The Melancholy of Haruhi Suzumiya\"."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.3",
  "rich>=13.7.1",
  "textual>=0.58.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[project.scripts]
haruhi = "haruhiloop_cli.main:app"
haruhi-play = "haruhiloop_cli.play_app:run_play"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
